Ensure the cythonized .c files and .pxd headers are included in sdist and wheel
While setuptools will now detect and use "cythonize", it doesn't include BOTH
the .pyx and .c files unless they're checked into SCM.

Build the Extensions in-place first, then create sdist bdist_wheel

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,9 @@ exclude =
 
 [options.package_data]
 * = LICENSE, README.md, requirements*.txt
-cycolorsys = *.pxd
+cycolorsys =
+    *.pxd
+    *.c
 
 [tool:pytest]
 testpaths = tests
