--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,7 @@ python:
 install:
   - pip install -U pip setuptools wheel
   - pip install -r requirements-dev.txt
+  - python setup.py build_ext --inplace
   - python setup.py sdist bdist_wheel
   - pip install dist/*.whl
   - ./build_tests.py
